@@ -2,6 +2,7 @@ from AccessControl import getSecurityManager
 from AccessControl import Unauthorized
 from AccessControl.SecurityManagement import newSecurityManager
 from AccessControl.SecurityManagement import setSecurityManager
+from Acquisition import aq_base
 from Acquisition import aq_inner
 from email.Utils import parseaddr
 from ftw.mail import exceptions
@@ -180,9 +181,10 @@ def set_defaults(obj):
 
     for schema in iterSchemata(obj):
         for name, field in getFieldsInOrder(schema):
-            if field.get(field.interface(obj)) == field.missing_value \
-                or field.get(field.interface(obj)) is None:
-
+            # Remove acquisition wrapper when getting field value so
+            # determining if a field is already set works as expected
+            value = field.get(field.interface(aq_base(obj)))
+            if value == field.missing_value or value is None:
                 # No value is set, so we try to set the default value
                 # otherwise we set the missing value
                 default = queryMultiAdapter((
