@@ -5,6 +5,11 @@ Changelog
 2.1.1 (unreleased)
 ------------------
 
+- Inbound view: Remove AQ wrapper when setting default values for newly
+  created objects, in order to not get bogus results (due to acquisition)
+  when checking whether a field is already present on the object.
+  [lgraf]
+
 - Fix From-/To-/Cc-Header encoding problem with Apple Mail.
   [jone]
 
